[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Controller/StateController.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dynamic_font_small.tres" type="DynamicFont" id=2]

[node name="StateController" type="Node2D"]
script = ExtResource( 1 )

[node name="RayCastPlayer" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 3

[node name="RayCastStatic" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="TracerTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DebugLabel" type="Label" parent="."]
margin_right = 32.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "State"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TracerTimer" to="." method="_on_TracerTimer_timeout"]
